--- a/views/login.html
+++ b/views/login.html
@@ -19,12 +19,18 @@
 					<div class="card fat">
 						<div class="card-body">
 							<h4 class="card-title">Login</h4>
-							<form method="POST">
+							<form method="POST" id="loginform" onsubmit="return loginsubmit()">
 							 
-								<div class="form-group">
+								<!-- <div class="form-group">
 									<label for="email">E-Mail Address</label>
 
 									<input id="email" type="email" class="form-control" name="email" value="" required autofocus>
+								</div> -->
+
+								<div class="form-group">
+									<label for="name">User Name</label>
+
+									<input id="name" type="text" class="form-control" name="name" value="" required autofocus>
 								</div>
 
 								<div class="form-group">
@@ -41,6 +47,8 @@
 										<input type="checkbox" name="remember"> Remember Me
 									</label>
 								</div>
+
+								<input type="text" name="_header" id="hheader"/>
 
 								<div class="form-group no-margin">
 									<button type="submit" class="btn btn-primary btn-block">
@@ -60,8 +68,9 @@
 			</div>
 		</div>
 	</section>
-
 	<script src="../static/js/jquery.min.js"></script>
+	<script src="../static/js/jquery.cookie.js"></script>
+	<script src="../static/js/base64.js"></script>
 	<script src="../static/js/bootstrap.min.js"></script>
 	<script src="../static/js/my-login.js"></script>
 </body>
